# NDK-Learn

./: Linux线程锁详解pthread_mutexattr_t.txt  README.md  gradlew  read
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioJavaCallBack.cpp  AudioJavaCallBack.h  AudioPlayStatus.cpp  AudioPlayStatus.h  AudioSource.cpp  AudioSource.h  CustomerAndProducer.h  LeiAudioPlayer.cpp  LeiAudioPlayer.h  LeiOpenSLES.cpp  LeiOpenSLES.h  jni-onLoad.h  lei-audio-player.cpp  native-test-object.cpp
app/src/main/cpp/audio/: AudioJavaCallBack.h  AudioPlayStatus.cpp  AudioPlayStatus.h  AudioSource.h  LeiAudioPlayer.cpp  LeiAudioPlayer.h  LeiOpenSLES.cpp  LeiOpenSLES.h  lei-audio-player.cpp
app/src/main/cpp/globle/: jni-onLoad.cpp  jni-onLoad.h  native-log.h
app/src/main/cpp/include/libavfilter/: avfilter.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: avutil.h
app/src/main/cpp/lamemp3/: lei_simple_lame.cpp
app/src/main/cpp/libaudio/: AudioFileTranscoder.cpp  AudioFileTranscoder.h  LibAudioFFMPEG.cpp  LibAudioFFMPEG.h  LibAudioOpenSLES.cpp  LibAudioOpenSLES.h  LibAudioPlayState.cpp  LibAudioPlayState.h  LibAudioPlayer.cpp  LibAudioPlayer.h  LibAudioQueue.cpp  LibAudioQueue.h  LibAudioSource.cpp  LibAudioSource.h  LibJavaCallBack.cpp  LibJavaCallBack.h  lei-audio-player.cpp
app/src/main/cpp/libvideo/: LibVideoFFMPEG.cpp  LibVideoFFMPEG.h  LibVideoJavaCallBack.cpp  LibVideoJavaCallBack.h  LibVideoPlayState.cpp  LibVideoPlayState.h  LibVideoPlayer.cpp  LibVideoPlayer.h  LibVideoQueue.cpp  LibVideoQueue.h  LibVideoSource.cpp  LibVideoSource.h  lei_video_player.cpp
app/src/main/cpp/test/: CustomerAndProducer.cpp  native-hello.cpp  native-test-object.cpp  pthread_test.cpp
app/src/main/java/android/media/: AmrInputStream.java
app/src/main/java/com/lei/ndk/: MainActivity.java  NDKApplication.java  NDKObject.java
app/src/main/java/com/lei/ndk/audio/: AudioActivity.java  AudioFinder.java  LeiAudioPlayer.java  MusicBean.java  PcmToAac.java
app/src/main/java/com/lei/ndk/nativetest/: NativeTestActivity.java  NativeTestObject.java
app/src/main/java/com/lei/ndk/opengles/: MyGLSurfaceView.java  NormalRender.java  OpenGLESTestActivity.java  TextureRender.java
app/src/main/java/com/lei/ndk/pthread/: PthreadTest.java
app/src/main/java/com/lei/ndk/transcode/: TranscodeActivity.java
app/src/main/java/com/lei/ndk/util/: FileUtil.java  LogUtil.java
app/src/main/java/com/lei/ndk/video/: VideoActivity.java  VideoBean.java  VideoFinder.java
app/src/main/java/com/sdk/audio/: AudioPlayer.java
app/src/main/java/com/sdk/audio/amrencoder/: AmrEncoder.java  I0Bessel.java  SSRC.java  SplitRadixFft.java
app/src/main/java/com/sdk/audio/lame/: SimpleLame.java
app/src/main/java/com/sdk/audio/transcoding/: AudioFileTranscoder.java  BasePCM2Transcoder.java  PCM2AacTranscoder.java  PCM2AmrTranscoder.java  PCM2Mp3Transcoder.java  TranscoderFactory.java  TranscoderTask.java
app/src/main/java/com/sdk/video/: GLProgramCreater.java  VideoGLSurfaceView.java  VideoHardwareUtil.java  VideoPlayer.java
app/src/main/res/layout/: activity_audio_test.xml  activity_main.xml  activity_native_test.xml  activity_transcode.xml  activity_video.xml  music_item.xml  opengles_test.xml
app/src/main/res/values/: colors.xml  strings.xml
